--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "kechol",
-  "version": "0.0.1",
-  "description": "kechol.net",
-  "main": "index.html",
-  "dependencies": {
-    "uglify-js": "~2.4.0"
-  },
+  "version": "0.0.0",
+  "dependencies": {},
   "devDependencies": {
-    "coffee-script": "~1.6.3"
+    "grunt": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-compass": "~0.5.0",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-cssmin": "~0.6.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-bower-install": "~0.5.0",
+    "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-rev": "~0.1.0",
+    "grunt-autoprefixer": "~0.2.0",
+    "grunt-usemin": "~0.1.10",
+    "grunt-svgmin": "~0.2.0",
+    "grunt-concurrent": "~0.3.0",
+    "load-grunt-tasks": "~0.1.0",
+    "time-grunt": "~0.1.1"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Kechol/kechol.net.git"
-  },
-  "keywords": [
-    "kechol"
-  ],
-  "readme": "This is my site.",
-  "author": "Kazuyuki SUZUKI",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Kechol/kechol.net/issues"
+  "engines": {
+    "node": ">=0.8.0"
   }
 }
