--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "kechol",
+  "name": "kechol.net",
   "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "build": "NODE_ENV=production webpack",
+    "start": "NODE_ENV=development webpack-dev-server",
+    "lint": "eslint src"
+  },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-compass": "~0.5.0",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-bower-install": "~0.5.0",
-    "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-rev": "~0.1.0",
-    "grunt-autoprefixer": "~0.2.0",
-    "grunt-usemin": "~0.1.10",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-concurrent": "~0.3.0",
-    "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
+    "autoprefixer": "^6.5.4",
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "file-loader": "^0.9.0",
+    "html-minifier": "^3.2.3",
+    "html-minifier-loader": "^1.3.4",
+    "postcss-loader": "^1.2.1",
+    "precss": "^1.4.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=6.9.2",
+    "npm": ">=3.10.9"
   }
 }
