--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
   "name": "kechol.net",
-  "version": "0.0.0",
+  "description": "https://kechol.net/",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "NODE_ENV=production webpack",
-    "start": "NODE_ENV=development webpack-dev-server",
-    "lint": "eslint src"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.5.4",
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
-    "babel-preset-es2015": "^6.18.0",
-    "css-loader": "^0.26.1",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "file-loader": "^0.9.0",
-    "html-minifier": "^3.2.3",
-    "html-minifier-loader": "^1.3.4",
-    "postcss-loader": "^1.2.1",
-    "precss": "^1.4.0",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
-  },
-  "engines": {
-    "node": ">=6.9.2",
-    "npm": ">=3.10.9"
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
