--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack",
+    "build:prod": "webpack --mode production",
     "start": "webpack-dev-server"
   },
   "dependencies": {},
